name: ezmon
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple

executable ezmon
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
                      , NoImplicitPrelude
  main-is:              Main.hs
  hs-source-dirs:       src
  build-depends:        base
                      , classy-prelude
                      , directory
                      , extra
                      , optparse-applicative
                      , process
                      , safe-exceptions
                      , filepath
  default-language:     Haskell2010
